Mais Mudanças e Adições

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -1,15 +1,15 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamento de Quadra</title>
+    <title>Agendamentos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container2">
         <h1>Horários Agendados</h1>
-        <a href="index.html"><button>Voltar</button></a>
+        <a href="pag_principal.html"><button class="botões"><<< Voltar</button></a>
+        <div id="agendItens"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="agend_script.js"></script>
 </body>
 </html>
