--- a/agendamentos.html
+++ b/agendamentos.html
@@ -8,7 +8,10 @@
     <div class="container2">
         <h1>Horários Agendados</h1>
         <a href="pag_principal.html"><button class="botões"><<< Voltar</button></a>
+        <fieldset>
+        <legend class="campoBuscar"><input id="inputBuscar" placeholder="Buscar por nome..."></legend>
         <div id="agendItens"></div>
+        </fieldset>
     </div>
     <script src="agend_script.js"></script>
 </body>
