--- a/agendamentos.html
+++ b/agendamentos.html
@@ -13,6 +13,6 @@
         <div id="agendItens"></div>
         </fieldset>
     </div>
-    <script src="agend_script.js"></script>
+    <script src="./agend_script.js"></script>
 </body>
 </html>
