--- a/pag_principal.html
+++ b/pag_principal.html
@@ -31,8 +31,10 @@
                     <div class="column">
                         <label for="horario">Horários Disponíveis:</label>
                         <select class="opções" id="horario" name="horario" required>
-                                <option>08:00</option>
-                                <option>09:00</option>
+                                <option value="08:00">08:00</option>
+                                <option value="09:00">09:00</option>
+                                <option value="16:00">16:00</option>
+                                <option value="17:00">17:00</option>
                         </select>
                     </div>
                 </div>
@@ -41,6 +43,6 @@
             </fieldset>
         </form>
     </div>
-    <script src="pagprinc_script.js"></script>
+    <script src="./pagprinc_script.js"></script>
 </body>
 </html>
